--- a/index.html
+++ b/index.html
@@ -7,29 +7,25 @@
     <link rel="stylesheet" id="main-style-sheet" href />
     <link rel="stylesheet" href="Styles/Themes/theme_dark.css" />
     <link rel="stylesheet" href="Styles/Themes/theme_light.css" />
-    <link rel="stylesheet" href="Styles/Animation/animation_ltr.css" />
     <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
     <title>To Do List</title>
     <script type="text/javascript" src="farvardin.js-master/dist/farvardin.min.js"></script>
   </head>
   <body>
-    <section id="preloader">
-      <img id="preloader-icon" src="Icons/PreLoader/PreLoadGif.gif" alt="" />
-      <span id="preloader-text">Loading....</span>
-    </section>
+    <div id="overlay" inert></div>
   </body>
+  <script src="JavaScript/Lang.js"></script>
   <script src="JavaScript/Theme.js"></script>
   <script src="JavaScript/DatePicker.js"></script>
   <script src="JavaScript/DatePickerLang.js"></script>
   <script src="JavaScript/Settings.js"></script>
-  <script src="JavaScript/Lang.js"></script>
   <script src="JavaScript/TextArray.js"></script>
-  <script src="JavaScript/TrashBin.js"></script>
   <script src="JavaScript/TaskManager.js"></script>
   <script src="JavaScript/ContextMenu.js"></script>
   <script src="JavaScript/UGCM.js"></script>
   <script src="JavaScript/DOMManager.js"></script>
+  <script src="JavaScript/TrashBin.js"></script>
   <script src="JavaScript/SubApps.js"></script>
   <script src="JavaScript/ModalManager.js"></script>
-  <script src="JavaScript/Engine.js"></script>
+  <script src="JavaScript/Engine.js" defer></script>
 </html>
