--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" id="main-style-sheet" href />
-    <link rel="stylesheet" href="Styles/Themes/theme_dark.css" />
-    <link rel="stylesheet" href="Styles/Themes/theme_light.css" />
-    <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
-    <title>To Do List</title>
-    <script type="text/javascript" src="farvardin.js-master/dist/farvardin.min.js"></script>
-  </head>
-  <body>
-    <div id="overlay" inert></div>
-  </body>
-  <script src="JavaScript/Lang.js"></script>
-  <script src="JavaScript/Theme.js"></script>
-  <script src="JavaScript/DatePicker.js"></script>
-  <script src="JavaScript/DatePickerLang.js"></script>
-  <script src="JavaScript/Settings.js"></script>
-  <script src="JavaScript/TextArray.js"></script>
-  <script src="JavaScript/TaskManager.js"></script>
-  <script src="JavaScript/ContextMenu.js"></script>
-  <script src="JavaScript/UGCM.js"></script>
-  <script src="JavaScript/DOMManager.js"></script>
-  <script src="JavaScript/TrashBin.js"></script>
-  <script src="JavaScript/SubApps.js"></script>
-  <script src="JavaScript/ModalManager.js"></script>
-  <script src="JavaScript/Engine.js" defer></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" id="main-style-sheet" href />
+  <link rel="stylesheet" href="Styles/Themes/theme_dark.css" />
+  <link rel="stylesheet" href="Styles/Themes/theme_light.css" />
+  <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
+  <title>To Do List</title>
+  <script type="text/javascript" src="farvardin.js-master/dist/farvardin.min.js"></script>
+</head>
+
+<body>
+  <div id="overlay" inert></div>
+</body>
+<script src="JavaScript/Lang.js"></script>
+<script src="JavaScript/Theme.js"></script>
+<script src="JavaScript/DatePicker.js"></script>
+<script src="JavaScript/DatePickerLang.js"></script>
+<script src="JavaScript/Settings.js"></script>
+<script src="JavaScript/TextArray.js"></script>
+<script src="JavaScript/UGCM.js"></script>
+<script src="JavaScript/TaskManager.js"></script>
+<script src="JavaScript/ContextMenu.js"></script>
+<script src="JavaScript/Notes.js"></script>
+<script src="JavaScript/DOMManager.js"></script>
+<script src="JavaScript/TrashBin.js"></script>
+<script src="JavaScript/SubApps.js"></script>
+<script src="JavaScript/ModalManager.js"></script>
+<script src="JavaScript/Engine.js" defer></script>
+
 </html>
