fixing minor bugs caused by previous changes , putting series of variables and flags tha the app relies on inside an object called appobj and converting it to a proxy for better error handling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div id="overlay" inert></div>
 </body>
+<script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
 <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js" defer></script>
 <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js" defer></script>
 <script src="JavaScript/Lang.js" defer></script>
