fixed a bug at GetTime() in the Javascript/SubApps.js that prevented the moon icon to be displayed at 12AM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <img id="background" src="NSFWBG.jpg" inert></img>
     <div id="overlay" inert></div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
