fixed minor bugs and removed unused icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Styles/Themes/theme_dark.css" />
     <link rel="stylesheet" href="Styles/Themes/theme_light.css" />
     <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <title>MilestonesX</title>
   </head>
 
@@ -15,11 +16,7 @@
     <img id="background" src="NSFWBG.jpg" inert></img>
     <div id="overlay" inert></div>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
-  <script type="text/javascript" src="Libraries/html2canvas.js" defer></script>
-  <script type="text/javascript" src="Libraries/Disintegrate-master/disintegrate.js" defer></script>
-  <script type="text/javascript" src="JavaScript/DisIntegrate.js" defer></script>
   <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js" defer></script>
   <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js" defer></script>
   <script src="JavaScript/Engine.js" defer></script>
