Added many options to theme tweaker modal and fixed many bugs , replaced all usercategory icons with new ones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <img id="background" src="NSFWBG.jpg" inert></img>
+    <img id="background" src="Wallpapers/NSFWBG.jpg" inert></img>
     <div id="overlay" inert></div>
   </body>
   <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
