fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div id="overlay" inert></div>
   </body>
   <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
+  <script type="text/javascript" src="Libraries/html2canvas.min.js" defer></script>
+  <script type="text/javascript" src="Libraries/disintegrate.js" defer></script>
   <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js" defer></script>
   <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js" defer></script>
   <script src="JavaScript/Engine.js" defer></script>
