added many api functions , added select box to settings , added 3d particles

--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" class="main-style-sheet" href />
-    <link rel="stylesheet" href="Styles/Themes/theme_dark.css" />
-    <link rel="stylesheet" href="Styles/Themes/theme_light.css" />
     <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css" />
     <title>MilestonesX</title>
   </head>
 
   <body>
-    <img id="background" src="Wallpapers/NSFWBG.jpg" inert></img>
-    <div id="overlay" inert></div>
+    <div id="particles-js" inert></div>
   </body>
-  <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
-  <script type="text/javascript" src="Libraries/html2canvas.min.js" defer></script>
-  <script type="text/javascript" src="Libraries/disintegrate.js" defer></script>
   <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js" defer></script>
   <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js" defer></script>
   <script src="JavaScript/Engine.js" defer></script>
@@ -33,4 +27,8 @@
   <script src="JavaScript/Notes.js" defer></script>
   <script src="JavaScript/DOMManager.js" defer></script>
   <script src="JavaScript/ModalManager.js" defer></script>
+  <script src="JavaScript/API.js" defer></script>
+  <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
+  <script src="Libraries/particles.js-master/particles.min.js" defer></script>
+  <script src="Libraries/particles.js-master/app.js" defer></script>
 </html>
