finished the cloud storage option except for handling network errors

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" class="main-style-sheet" href />
-    <link rel="stylesheet" href="Styles/Main/Reasponsive/mediaQuery.css" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css" />
+    <link rel="stylesheet" class="css-rules-style-sheet" href="Styles/CssRules/css_rules.css" />
     <title>MilestonesX</title>
   </head>
 
