Im tiered of writing commit messages ....

--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Styles/CssRules/css_rules.css" />
     <link rel="stylesheet" class="main-style-sheet" href />
-    <link rel="stylesheet" class="css-rules-style-sheet" href="Styles/CssRules/css_rules.css" />
     <title>MilestonesX</title>
   </head>
 
   <body>
     <div id="particles-js" inert></div>
   </body>
-  <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js" defer></script>
-  <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js" defer></script>
-  <script src="JavaScript/Engine.js" defer></script>
-  <script src="JavaScript/SubApps.js" defer></script>
-  <script src="JavaScript/Theme.js" defer></script>
-  <script src="JavaScript/MessageBox.js" defer></script>
-  <script src="JavaScript/DatePicker.js" defer></script>
-  <script src="JavaScript/Settings.js" defer></script>
-  <script src="JavaScript/UGCM.js" defer></script>
-  <script src="JavaScript/TaskManager.js" defer></script>
-  <script src="JavaScript/ContextMenu.js" defer></script>
-  <script src="JavaScript/Notes.js" defer></script>
-  <script src="JavaScript/DOMManager.js" defer></script>
-  <script src="JavaScript/ModalManager.js" defer></script>
-  <script src="JavaScript/API.js" defer></script>
-  <script type="text/javascript" src="JavaScript/AppObj.js" defer></script>
-  <script src="Libraries/particles.js-master/particles.min.js" defer></script>
-  <script src="Libraries/particles.js-master/app.js" defer></script>
+  <script type="text/javascript" src="Libraries/farvardin.js-master/dist/farvardin.min.js"></script>
+  <script type="text/javascript" src="Libraries/tinymce/tinymce.min.js"></script>
+  <script src="JavaScript/Engine.js"></script>
+  <script src="JavaScript/SubApps.js"></script>
+  <script src="JavaScript/Theme.js"></script>
+  <script src="JavaScript/MessageBox.js"></script>
+  <script src="JavaScript/DatePicker.js"></script>
+  <script src="JavaScript/Settings.js"></script>
+  <script src="JavaScript/UGCM.js"></script>
+  <script src="JavaScript/TaskManager.js"></script>
+  <script src="JavaScript/ContextMenu.js"></script>
+  <script src="JavaScript/Notes.js"></script>
+  <script src="JavaScript/DOMManager.js"></script>
+  <script src="JavaScript/ModalManager.js"></script>
+  <script src="JavaScript/API.js"></script>
+  <script type="text/javascript" src="JavaScript/AppObj.js"></script>
+  <script src="Libraries/particles.js-master/particles.min.js"></script>
+  <script src="Libraries/particles.js-master/app.js"></script>
 </html>
